--- a/cvajchara05/aboutus.html
+++ b/cvajchara05/aboutus.html
@@ -104,9 +104,9 @@
   <header>
     <div class="logo">AJCHARA SAU</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#" class="active">About</a>
-      <a href="#">Portfolio</a>
+      <a href="index.html">Home</a>
+      <a href="aboutus.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
     </nav>
     <button class="talk-btn">Let's talk</button>
   </header>
@@ -115,7 +115,6 @@
   <section class="about">
     <div class="about-left">
       <h1>About Me</h1>
-      <!-- ใส่รูปทรงที่คุณต้องการแทน shape.png -->
       <img src="./image/loader_01.png" alt="shape">
     </div>
     <div class="about-right">
