--- a/cvajchara05/index.html
+++ b/cvajchara05/index.html
@@ -173,12 +173,12 @@
     <div class="logo">AJCHARA SAU</div>
     <nav>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutus.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
-    <a href="#" class="btn-talk">Let's talk</a>
+    <a href="portfolio.html" class="btn-talk">Let's talk</a>
   </header>
 
   <!-- ===== HERO SECTION ===== -->
