--- a/cvajchara05/portfolio.html
+++ b/cvajchara05/portfolio.html
@@ -139,12 +139,12 @@
     <div class="logo">AJCHARA SAU</div>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#" style="color:#facc15;">Portfolio</a></li>
+         <li><a href="index.html">Home</a></li>
+        <li><a href="aboutus.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
-    <a href="#" class="btn-talk">Let's talk</a>
+    <a href="contact.html" class="btn-talk">Let's talk</a>
   </header>
 
   <!-- Portfolio Section -->
