--- a/cvajchara05/contact.html
+++ b/cvajchara05/contact.html
@@ -99,9 +99,9 @@
   <header>
     <div class="logo">AJCHARA SAU</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
+      <a href="index.html">Home</a>
+      <a href="aboutus.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
     </nav>
     <button class="talk-btn">Let's talk</button>
   </header>
