--- a/cvajchara01/index.html
+++ b/cvajchara01/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copter CV V1.0</title>
+    <title>cvajchara01</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -41,7 +41,7 @@
         color: #ff7b00;
       }
       .logo-bar img {
-        width: 50px;
+        width: 70px;
       }
       .fa-brands {
         color: #fff;
@@ -100,7 +100,7 @@
         <a href="#">Get In Touch</a>
       </div>
       <div class="logo-bar">
-        <img src="./images/logo.png" alt="logo" />
+        <img src="./images/Logo.png" alt="logo" />
       </div>
       <div class="social-bar">
         <i class="fa-brands fa-github"></i>
